...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/auth_navigation">

    <navigation
        android:id="@+id/auth_navigation"
        app:startDestination="@id/loginFragment">
        <fragment
            android:id="@+id/loginFragment"
            android:name="iooojik.anon.meet.ui.auth.login.LoginFragment"
            android:label="@string/login_fragment_title"
            tools:layout="@layout/fragment_login">
            <action
                android:id="@+id/action_loginFragment_to_registrationFragment1"
                app:destination="@id/registrationFragment1"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        </fragment>
        <fragment
...
