...
                android:layout_gravity="center"
                android:layout_margin="@dimen/standard_margin_2"
                android:onClick="@{fragment::onLoginButtonClick}"
                android:text="@string/login" />

            <Button
                android:id="@+id/go_to_registration_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/standard_margin_2"
                android:onClick="@{fragment::onRegistrationButtonClick}"
                android:text="@string/register" />
...
