...
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        app:values="@{user.filter.interlocutorAgesRange}" />
                </LinearLayout>

                <Button
                    android:id="@+id/search_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin_2"
                    android:text="@string/find" />

            </LinearLayout>
...
